test/Dialect/LLZK/Inputs/header_6.llzk
// Imported via `include_fail.llzk`

module attributes {veridise.lang = "llzk"} {
  // expected-error@+1 {{array must have at least one dimension}}
  llzk.func private @b(%x: !llzk.array<!llzk.felt>) 
}
